add log monitor module

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,8 @@
 <script src="scripts/libs/bootstrap.js" type="text/javascript"></script>
 <script src="scripts/libs/bootstrap-paginator.js" type="text/javascript"></script>
 <script src="scripts/libs/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
+<script src="scripts/libs/highcharts.js" type="text/javascript"></script>
+
 
 <script src="scripts/common/public.js" type="text/javascript"></script>
 <script src="scripts/common/paginator.js" type="text/javascript"></script>
@@ -35,7 +37,7 @@
 		<div class="navbar-inner">
 			<div class="container-fluid">
 				<!-- LOGO BEGIN -->
-				<a class="brand" href="/bmp/views/index.html"><img src="images/felice-logo2.png" /></a>
+				<a class="brand" href="index.html"><img src="images/logo2.png" /></a>
 				<!-- LOGO END -->
 				<!-- TOP NAVIGATION MENU BEGIN -->
 				<ul class="nav pull-right">
@@ -131,6 +133,7 @@
 		</div>
 	</div>
 	<!-- CONTAINER END -->
+	
 	<!-- FOTTER BEGIN -->
 	<footer class="footer">
         <p>User Authentication &amp; Authorization System V1.0 &copy; <a href="http://elan2wang.github.io/">Jian Wang</a></p>
