--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -30,7 +30,7 @@
 </head>
 <body class="login">
 	<div class="logo">
-		<img src="images/felice-logo1.png" />
+		<img src="images/logo1.png" />
 	</div>
 	<div class="content">
 		<div id="waiting_login" class="hide"></div>
