--- a/src/main/webapp/admin/user_list.html
+++ b/src/main/webapp/admin/user_list.html
@@ -61,7 +61,7 @@
 					<div class="control-group">
 						<div class="controls1">
 							<label class="fl mr10 text-right input-smal">用 &nbsp;户
-								&nbsp;名</label> <input id="account_name" name="account_name"
+								&nbsp;名</label> <input id="username" name="username"
 								class="input-middle" type="text" size="16" value="">
 						</div>
 					</div>
