--- a/src/main/webapp/admin/mod_list.html
+++ b/src/main/webapp/admin/mod_list.html
@@ -75,7 +75,7 @@
 				</div>
 			</div>
 			<hr class="line">
-			<button type="submit" id="btn_mod_add_submit" class="btn btn-success">保存</button>
+			<button type="submit" id="btn_mod_add_submit" class="btn btn-success">新增</button>
 			<button type="submit" id="btn_mod_edit_submit" class="btn btn-success hide">修改</button>
 			<button type="submit" id="btn_mod_switch_submit" class="btn btn-inverse hide">启用</button>
 			<button type="submit" id="btn_mod_delete_submit" class="btn btn-danger hide">删除</button>
