--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Uaa</h1>
+        <h1>UAA</h1>
         <p>User Authentication and Authorization System</p>
 
         <p class="view"><a href="https://github.com/elan2wang/UAA">View the Project on GitHub <small>elan2wang/UAA</small></a></p>
